# P2P_messenger

./: CMakeLists.txt  Jamroot  Makefile  library_setup.py  main.cpp  main.hpp
include/: client.h  message.h  server.h
lib/: main.cpp
src/: client  client_local  client_side.cpp  server  server_side.cpp
